--- a/wp-content/themes/portfolio/assets/sass/style.scss
+++ b/wp-content/themes/portfolio/assets/sass/style.scss
@@ -111,6 +111,22 @@ body, html{
 }
 
 .iframe{
+    position: relative;
+    z-index: 50;
+    .close{
+        position: fixed;
+        top: 0;
+        left: 30px;
+        z-index: 60;
+        cursor: pointer;
+        opacity: 0;
+        color: #fff;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-size: 11px;
+        text-decoration: none;
+        letter-spacing: .075em;
+    }
     iframe{
         width: 100%;
         position: fixed;
@@ -118,6 +134,10 @@ body, html{
         top: 0;
         height: 100%;
         z-index: 30;
+        opacity: 0;
+        z-index: 10;
+        transform: scale(1.1);
+        -webkit-transform: scale(1.1);
     }
 }
 .background-full{
@@ -139,7 +159,7 @@ body, html{
 
     &:after{
         content: '';
-        position: absolute;
+        position: fixed;
         left: 0;
         top: 0;
         width: 100%;
@@ -173,6 +193,7 @@ body, html{
             letter-spacing: .08em;
             margin-top: 20px;
             font-weight: 500;
+            cursor: pointer;
             &:before{
                 content: '';
                 width: 20px;
