--- a/wp-content/themes/portfolio/assets/stylesheets/style.css
+++ b/wp-content/themes/portfolio/assets/stylesheets/style.css
@@ -126,7 +126,27 @@ body, html {
   background-size: cover;
 }
 
-/* line 114, ../sass/style.scss */
+/* line 113, ../sass/style.scss */
+.iframe {
+  position: relative;
+  z-index: 50;
+}
+/* line 116, ../sass/style.scss */
+.iframe .close {
+  position: fixed;
+  top: 0;
+  left: 30px;
+  z-index: 60;
+  cursor: pointer;
+  opacity: 0;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 11px;
+  text-decoration: none;
+  letter-spacing: .075em;
+}
+/* line 130, ../sass/style.scss */
 .iframe iframe {
   width: 100%;
   position: fixed;
@@ -134,9 +154,13 @@ body, html {
   top: 0;
   height: 100%;
   z-index: 30;
+  opacity: 0;
+  z-index: 10;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
 }
 
-/* line 123, ../sass/style.scss */
+/* line 143, ../sass/style.scss */
 .background-full {
   position: absolute;
   top: 0;
@@ -146,17 +170,17 @@ body, html {
   height: 100%;
   opacity: 0;
 }
-/* line 133, ../sass/style.scss */
+/* line 153, ../sass/style.scss */
 .background-full .content {
   position: relative;
   z-index: 30;
   width: 100%;
   height: 100%;
 }
-/* line 140, ../sass/style.scss */
+/* line 160, ../sass/style.scss */
 .background-full:after {
   content: '';
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
@@ -164,7 +188,7 @@ body, html {
   background: rgba(51, 51, 51, 0.25);
   z-index: 3;
 }
-/* line 151, ../sass/style.scss */
+/* line 171, ../sass/style.scss */
 .background-full .text {
   position: absolute;
   left: 90px;
@@ -178,20 +202,21 @@ body, html {
   -webkit-transform: translateY(-50%);
   text-decoration: none;
 }
-/* line 165, ../sass/style.scss */
+/* line 185, ../sass/style.scss */
 .background-full .text .title {
   font-size: 55px;
   line-height: 55px;
 }
-/* line 170, ../sass/style.scss */
+/* line 190, ../sass/style.scss */
 .background-full .text .link {
   line-height: 20px;
   font-size: 14px;
   letter-spacing: .08em;
   margin-top: 20px;
   font-weight: 500;
+  cursor: pointer;
 }
-/* line 176, ../sass/style.scss */
+/* line 197, ../sass/style.scss */
 .background-full .text .link:before {
   content: '';
   width: 20px;
@@ -202,7 +227,7 @@ body, html {
   float: left;
   margin-right: 10px;
 }
-/* line 189, ../sass/style.scss */
+/* line 210, ../sass/style.scss */
 .background-full .category {
   position: absolute;
   right: 30px;
@@ -213,7 +238,7 @@ body, html {
   font-weight: 600;
   letter-spacing: .08em;
 }
-/* line 200, ../sass/style.scss */
+/* line 221, ../sass/style.scss */
 .background-full .date {
   position: absolute;
   text-transform: uppercase;
@@ -224,7 +249,7 @@ body, html {
   font-weight: 600;
   letter-spacing: .08em;
 }
-/* line 211, ../sass/style.scss */
+/* line 232, ../sass/style.scss */
 .background-full.active {
   opacity: 1;
 }
